--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,33 @@
 body{
-  background-image: radial-gradient(circle, #ffa7f0, #fbb5f6, #f7c2fb, #f5cefe, #f4daff);
-  color: #670055
-  
+  /* background-image: radial-gradient(circle, #ffa7f0, #fbb5f6, #f7c2fb, #f5cefe, #f4daff); */
+  color: #e900c2;
+  background-color: black;
+  margin-bottom: 10%;
+
+  background-image:url('img/snowy.gif');
+  background-size: cover;
+
+  /* background-size:100%;
+  background-repeat: repeat-y;
+  background-attachment: fixed;
+  height:100%;
+  width:100%; */
 }
 
 .jumbotron {
   text-align: center;
   background:transparent !important;
   font-weight: 900;
+}
+
+.imgy {
+  display: flex;
+  justify-content: center;
+
+  /* width:100%;
+  height:100%; */
+  background-size: cover;
+
 }
 
 .better{
@@ -19,6 +39,9 @@ body{
   margin-left: 15%;
   margin-right: 15%;
   display: none;
+  color: #94007c;
+
+  /* text-align: center; */
 }
 
 
